--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "include": [
     "lib/**/*.ts"
-  ],
+, "lib/common"  ],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
