--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@fizz/chart-classifier-utils": "^0.16.0",
     "@fizz/chart-data-norm": "^0.5.0",
     "@fizz/chart-summary": "^0.5.2-alpha.1",
+    "@fizz/clustering": "^0.10.0",
     "@fizz/csv-processor": "^1.3.0",
     "@fizz/dataframe": "^0.27.0",
     "@fizz/grammatize-information": "^1.5.0",
