--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@fizz/line-chart-metadata": "^4.7.4-alpha.0",
     "@fizz/line-chart-parameters": "^1.0.1",
     "@fizz/paramanifest": "^0.3.0",
+    "@fizz/paramodel": "^0.1.1",
     "@fizz/templum": "^0.4.2",
     "@fizz/todocharts": "^0.129.6",
     "@fizz/ui-components": "^0.69.0",
