--- a/package.json
+++ b/package.json
@@ -84,8 +84,9 @@
     "@fizz/grammatize-information": "^1.5.0",
     "@fizz/line-chart-metadata": "^4.7.4-alpha.0",
     "@fizz/line-chart-parameters": "^1.0.1",
-    "@fizz/paramanifest": "^0.3.0",
+    "@fizz/paramanifest": "^0.3.2",
     "@fizz/paramodel": "^0.1.5",
+    "@fizz/parasummary": "^0.1.0",
     "@fizz/templum": "^0.4.2",
     "@fizz/todocharts": "^0.129.6",
     "@fizz/ui-components": "^0.69.0",
