--- a/package.json
+++ b/package.json
@@ -100,5 +100,8 @@
     "simple-statistics": "^7.8.8",
     "typescript-memoize": "^1.1.1"
   },
+  "optionalDependencies":{
+    "@fizz/series-analyzer": "0.13.7"
+  },
   "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
 }
