Added  AI-enhanced demo stub

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "type": "module",
   "scripts": {
     "demo": "vite --port 5176",
-    "headless": "vite --port 5177 --open /headless.html",
+    "headless": "vite --port 5177 --open src/demo/headless.html",
+    "demo:ai": "vite --port 5178 --open src/ai/ai.html",
     "build": "rimraf dist && tsc && vite build && api-extractor run --local --verbose",
     "build:ai": "rimraf dist-ai && tsc --project ai.tsconfig.json && vite build --config ai.vite.config.ts && api-extractor run --local --verbose --config ai.api-extractor.json",
     "pretest": "npm run build",
