--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "@fizz/line-chart-metadata": "^4.7.4-alpha.0",
     "@fizz/line-chart-parameters": "^1.0.1",
     "@fizz/paramanifest": "^0.3.3-alpha.0",
-    "@fizz/paramodel": "^0.1.9-alpha.0",
+    "@fizz/paramodel": "^0.1.9-alpha.8",
     "@fizz/parasummary": "^0.3.2-alpha.0",
     "@fizz/templum": "^0.4.2",
     "@fizz/todocharts": "^0.129.6",
@@ -103,7 +103,7 @@
     "typescript-memoize": "^1.1.1"
   },
   "optionalDependencies": {
-    "@fizz/series-analyzer": "0.13.7"
+    "@fizz/series-analyzer": "^0.13.8"
   },
   "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
 }
