Still trying to fix soni.

--- a/package.json
+++ b/package.json
@@ -88,8 +88,8 @@
     "@fizz/line-chart-metadata": "^4.7.4-alpha.0",
     "@fizz/line-chart-parameters": "^1.0.1",
     "@fizz/paramanifest": "^0.3.2",
-    "@fizz/paramodel": "^0.1.7-alpha.0",
-    "@fizz/parasummary": "^0.2.2-alpha.7",
+    "@fizz/paramodel": "^0.1.11",
+    "@fizz/parasummary": "^0.3.1",
     "@fizz/sparkbraille-component": "^0.5.0",
     "@fizz/templum": "^0.4.2",
     "@fizz/todocharts": "^0.129.6",
