--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "demo:ai": "vite --port 5178 --open src/demo/ai/ai.html",
     "build": "rimraf dist && tsc && vite build && api-extractor run --local --verbose",
     "build:ai": "rimraf dist-ai && tsc --project ai.tsconfig.json && vite build --config ai.vite.config.ts && api-extractor run --local --verbose --config ai.api-extractor.json",
+    "build:stories": "node src/stories/storiesBuilder.ts",
     "pretest": "npm run build",
     "test": "vitest",
     "doc": "api-documenter markdown --input-folder ./temp --output-folder ./docs",
@@ -37,8 +38,7 @@
     "dev": "storybook dev --no-open -p 5180",
     "storybook": "storybook dev -p 5180",
     "build-storybook": "storybook build",
-    "test-storybook": "test-storybook",
-    "build-stories": "node src/stories/storiesBuilder.ts"
+    "test-storybook": "test-storybook"
   },
   "files": [
     "dist"
