--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "@fizz/line-chart-parameters": "^1.0.1",
     "@fizz/paramanifest": "^0.3.3-alpha.0",
     "@fizz/paramodel": "^0.1.9-alpha.8",
-    "@fizz/parasummary": "^0.3.2-alpha.1",
+    "@fizz/parasummary": "^0.3.3",
     "@fizz/sparkbraille-component": "^0.5.0",
     "@fizz/templum": "^0.4.2",
     "@fizz/todocharts": "^0.129.6",
