--- a/package.json
+++ b/package.json
@@ -86,9 +86,9 @@
     "@fizz/grammatize-information": "^1.5.0",
     "@fizz/line-chart-metadata": "^4.7.4-alpha.0",
     "@fizz/line-chart-parameters": "^1.0.1",
-    "@fizz/paramanifest": "^0.3.3-alpha.0",
+    "@fizz/paramanifest": "^0.3.8",
     "@fizz/paramodel": "^0.1.10-alpha.1",
-    "@fizz/parasummary": "^0.3.4-alpha.1",
+    "@fizz/parasummary": "^0.3.4",
     "@fizz/sparkbraille-component": "^0.5.0",
     "@fizz/templum": "^0.4.2",
     "@fizz/todocharts": "^0.129.6",
