--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pubminor": "npm version minor && npm publish",
     "pubmajor": "npm version major && npm publish",
     "dev": "storybook dev --no-open -p 5180",
+    "go": "npm i && storybook dev --no-open -p 5180",
     "storybook": "storybook dev -p 5180",
     "build-storybook": "storybook build",
     "test-storybook": "test-storybook"
