--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "types": "./dist/paracharts.d.ts",
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.0.1",
     "@fizz/chart-data": "^2.1.8",
     "@fizz/line-chart-intersection": "^3.4.0",
     "@fizz/line-chart-ui-utils": "^0.7.0",
@@ -57,6 +58,7 @@
     "@microsoft/api-documenter": "^7.25.11",
     "@microsoft/api-extractor": "^7.47.6",
     "@storybook/addon-coverage": "^2.0.0",
+    "@storybook/addon-docs": "^9.0.13",
     "@storybook/addon-links": "^9.0.13",
     "@storybook/test-runner": "^0.23.0",
     "@storybook/web-components-vite": "^9.0.13",
@@ -68,8 +70,7 @@
     "storybook": "^9.0.13",
     "typescript": "^5.8.3",
     "vite": "^5.4.0",
-    "vitest": "^2.1.5",
-    "@storybook/addon-docs": "^9.0.13"
+    "vitest": "^2.1.5"
   },
   "dependencies": {
     "@fizz/breakdancer": "^0.22.0",
