--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fizz/paracharts",
-  "version": "0.35.0-0",
+  "version": "0.35.0-alpha.0",
   "description": "Not quite Parable Charts",
   "contributors": [
     "Josh Fennell",
