--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   },
   "types": "./dist/paracharts.d.ts",
   "devDependencies": {
-    "@fizz/chart-data": "^2.2.2",
+    "@fizz/chart-data": "^2.2.3",
     "@fizz/line-chart-intersection": "^3.4.0",
     "@fizz/line-chart-ui-utils": "^0.7.0",
     "@fizz/test-utils": "^0.2.0",
@@ -59,16 +59,19 @@
     "@storybook/addon-coverage": "^2.0.0",
     "@storybook/addon-docs": "^9.0.13",
     "@storybook/addon-links": "^9.0.13",
+    "@storybook/addon-vitest": "^9.0.13",
     "@storybook/test-runner": "^0.23.0",
     "@storybook/web-components-vite": "^9.0.13",
     "@types/papaparse": "^5.3.16",
-    "@vitest/coverage-v8": "^2.1.1",
     "eslint-plugin-storybook": "^9.0.13",
     "rimraf": "^6.0.1",
     "storybook": "^9.0.13",
     "typescript": "^5.8.3",
     "vite": "^5.4.0",
-    "vitest": "^2.1.5"
+    "vitest": "^3.2.4",
+    "@vitest/browser": "3.2.4",
+    "playwright": "^1.54.1",
+    "@vitest/coverage-v8": "3.2.4"
   },
   "dependencies": {
     "@fizz/breakdancer": "^0.22.0",
@@ -78,12 +81,11 @@
     "@fizz/csv-processor": "^1.3.0",
     "@fizz/dataframe": "^0.27.0",
     "@fizz/line-chart-metadata": "^4.7.4-alpha.0",
-    "@fizz/paramanifest": "^0.5.4",
-    "@fizz/paramodel": "^0.5.2",
+    "@fizz/paramanifest": "^0.5.7",
+    "@fizz/paramodel": "^0.5.3",
     "@fizz/parasummary": "^0.5.3",
     "@fizz/sparkbraille-component": "^0.5.0",
     "@fizz/templum": "^0.4.2",
-    "@fizz/todocharts": "^0.129.6",
     "@fizz/ui-components": "^0.70.1",
     "@lit-app/state": "^1.0.1",
     "decimal.js": "^10.4.3",
