--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "build:ai": "rimraf dist-ai && tsc --project ai.tsconfig.json && vite build --config ai.vite.config.ts && api-extractor run --local --verbose --config ai.api-extractor.json",
     "build:stories": "node src/stories/storiesBuilder.ts",
     "pretest": "npm run build",
-    "test": "vitest",
+    "test": "npx vitest --project=storybook",
     "doc": "api-documenter markdown --input-folder ./temp --output-folder ./docs",
     "pubpatch": "npm version patch && npm publish",
     "pubminor": "npm version minor && npm publish",
@@ -39,7 +39,7 @@
     "go": "npm i && storybook dev --no-open -p 5180",
     "storybook": "storybook dev -p 5180",
     "build-storybook": "storybook build",
-    "test-storybook": "test-storybook"
+    "test-storybook": "test-storybook --url http://localhost:5180/ --maxWorkers=2"
   },
   "files": [
     "dist"
@@ -63,15 +63,15 @@
     "@storybook/test-runner": "^0.23.0",
     "@storybook/web-components-vite": "^9.0.13",
     "@types/papaparse": "^5.3.16",
+    "@vitest/browser": "3.2.4",
+    "@vitest/coverage-v8": "3.2.4",
     "eslint-plugin-storybook": "^9.0.13",
+    "playwright": "^1.54.1",
     "rimraf": "^6.0.1",
     "storybook": "^9.0.13",
     "typescript": "^5.8.3",
     "vite": "^5.4.0",
-    "vitest": "^3.2.4",
-    "@vitest/browser": "3.2.4",
-    "playwright": "^1.54.1",
-    "@vitest/coverage-v8": "3.2.4"
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@fizz/breakdancer": "^0.22.0",
@@ -94,6 +94,7 @@
     "mathjs": "^14.5.3",
     "papaparse": "^5.5.3",
     "printf": "^0.6.1",
+    "shadow-dom-testing-library": "^1.12.0",
     "simple-statistics": "^7.8.8",
     "typescript-memoize": "^1.1.1"
   },
