--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "build-storybook": "storybook build",
     "doc": "api-documenter markdown --input-folder ./temp --output-folder ./docs",
     "pretest": "npm run build",
-    "test": "npx vitest --project=storybook",
+    "test": "npx vitest run --project=storybook --poolOptions.threads.maxThreads 2",
     "test-storybook": "test-storybook --url http://localhost:5180/ --maxWorkers=2",
     "pubpatch": "npm version patch && npm publish",
     "pubminor": "npm version minor && npm publish",
