--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "@fizz/dataframe": "^0.27.0",
     "@fizz/paramanifest": "^0.5.8",
     "@fizz/paramodel": "^0.5.8",
-    "@fizz/parasummary": "^0.5.8-alpha.1",
+    "@fizz/parasummary": "^0.5.8",
     "@fizz/sparkbraille-component": "^0.5.0",
     "@fizz/templum": "^0.4.2",
     "@fizz/ui-components": "^0.70.1",
