--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "rimraf": "^6.0.1",
     "shadow-dom-testing-library": "^1.12.0",
     "storybook": "^9.0.13",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "vite": "^5.4.0",
     "vitest": "^3.2.4"
