Updated contributors list

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "Simon Varey",
     "Julianna Langston",
     "Doug Schepers",
-    "Sam Reid"
+    "Sam Reid",
+    "Ryan McCleary",
+    "Charlotte McCleary"
   ],
   "license": "AGPL-3.0-or-later",
   "publishConfig": {
