--- a/package.json
+++ b/package.json
@@ -61,10 +61,12 @@
     "@storybook/addon-vitest": "^9.0.13",
     "@storybook/test-runner": "^0.23.0",
     "@storybook/web-components-vite": "^9.0.13",
+    "@types/mustache": "^4.2.6",
     "@types/papaparse": "^5.3.16",
     "@vitest/browser": "3.2.4",
     "@vitest/coverage-v8": "3.2.4",
     "eslint-plugin-storybook": "^9.0.13",
+    "mustache": "^4.2.0",
     "playwright": "^1.54.1",
     "rimraf": "^6.0.1",
     "shadow-dom-testing-library": "^1.12.0",
