--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -27,10 +27,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Generate markdown (mustache)
+      - name: Generate markdown
         run: npm run docs:generate
 
-      - name: Build site (VitePress)
+      - name: Build site
         run: npm run docs:build
 
       - name: Upload Pages artifact
