--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "@fizz/clustering": "^0.15.3",
     "@fizz/dataframe": "^0.27.0",
     "@fizz/paramanifest": "^0.5.8",
-    "@fizz/paramodel": "^0.6.3-alpha.3",
+    "@fizz/paramodel": "^0.6.3",
     "@fizz/parasummary": "^0.7.2-alpha.1",
     "@fizz/sparkbraille-component": "^0.5.0",
     "@fizz/templum": "^0.4.2",
