--- a/package.json
+++ b/package.json
@@ -42,7 +42,11 @@
     "test-storybook": "test-storybook --url http://localhost:5180/ --maxWorkers=2",
     "pubpatch": "npm version patch && npm publish",
     "pubminor": "npm version minor && npm publish",
-    "pubmajor": "npm version major && npm publish"
+    "pubmajor": "npm version major && npm publish",
+    "docs:generate": "node ./docs/scripts/buildDocs.ts",
+    "docs:dev": "npm run docs:generate && vitepress dev docs",
+    "docs:build": "npm run docs:generate && vitepress build docs",
+    "docs:serve": "vitepress preview docs"
   },
   "files": [
     "dist"
@@ -67,12 +71,15 @@
     "@vitest/browser": "3.2.4",
     "@vitest/coverage-v8": "3.2.4",
     "eslint-plugin-storybook": "^9.0.13",
+    "mustache": "^4.2.0",
+    "@types/mustache": "^4.2.6",
     "playwright": "^1.54.1",
     "rimraf": "^6.0.1",
     "shadow-dom-testing-library": "^1.12.0",
     "storybook": "^9.0.13",
     "typescript": "^5.8.3",
     "vite": "^5.4.0",
+    "vitepress": "^1.6.4",
     "vitest": "^3.2.4"
   },
   "dependencies": {
