--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "@fizz/dataframe": "^0.27.0",
     "@fizz/paramanifest": "^0.5.9",
     "@fizz/paramodel": "^0.6.6",
-    "@fizz/parasummary": "^0.7.2-alpha.3",
+    "@fizz/parasummary": "^0.8.0",
     "@fizz/sparkbraille-component": "^0.5.0",
     "@fizz/templum": "^0.4.2",
     "@fizz/ui-components": "^0.70.3",
