--- a/package.json
+++ b/package.json
@@ -63,16 +63,19 @@
     "@storybook/addon-vitest": "^9.0.13",
     "@storybook/test-runner": "^0.23.0",
     "@storybook/web-components-vite": "^9.0.13",
+    "@types/mustache": "^4.2.6",
     "@types/papaparse": "^5.3.16",
     "@vitest/browser": "3.2.4",
     "@vitest/coverage-v8": "3.2.4",
     "eslint-plugin-storybook": "^9.0.13",
+    "mustache": "^4.2.0",
     "playwright": "^1.54.1",
     "rimraf": "^6.0.1",
     "shadow-dom-testing-library": "^1.12.0",
     "storybook": "^9.0.13",
     "typescript": "^5.8.3",
     "vite": "^5.4.0",
+    "vitepress": "^1.6.4",
     "vitest": "^3.2.4"
   },
   "dependencies": {
