Clear types folder on build

--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "demo:headless": "vite --port 5177 --open src/demo/headless/vite/headless.html",
     "demo:ai": "vite --port 5178 --open src/demo/ai/ai.html",
     "storybook": "storybook dev -p 5180",
-    "build": "rimraf dist && tsc && vite build && api-extractor run --local --verbose",
-    "build:ai": "rimraf dist-ai && tsc --project ai.tsconfig.json && vite build --config ai.vite.config.ts && api-extractor run --local --verbose --config ai.api-extractor.json",
+    "build": "rimraf dist && rimraf types && tsc && vite build && api-extractor run --local --verbose",
+    "build:ai": "rimraf dist-ai && rimraf types-ai && tsc --project ai.tsconfig.json && vite build --config ai.vite.config.ts && api-extractor run --local --verbose --config ai.api-extractor.json",
     "build:stories": "node src/stories/storiesBuilder.ts",
     "build-storybook": "storybook build",
     "doc": "api-documenter markdown --input-folder ./temp --output-folder ./docs",
