--- a/package.json
+++ b/package.json
@@ -123,8 +123,8 @@
     "@fizz/dataframe": "^0.27.0",
     "@fizz/jimerator": "^0.9.0",
     "@fizz/paramanifest": "^0.5.9",
-    "@fizz/paramodel": "^0.6.6",
-    "@fizz/parasummary": "^0.9.1",
+    "@fizz/paramodel": "^0.6.7-alpha.1",
+    "@fizz/parasummary": "^0.9.2-alpha.0",
     "@fizz/sparkbraille-component": "^0.5.0",
     "@fizz/templum": "^0.4.2",
     "@fizz/ui-components": "^0.70.4",
