Minor fixes and cleanup

--- a/src/demo-data/line-china-gdp-line-basic.manifest.json
+++ b/src/demo-data/line-china-gdp-line-basic.manifest.json
@@ -202,7 +202,7 @@
       },
       "settings": {
         "controlPanel.isControlPanelDefaultOpen": false,
-        "chart.showPopups": true, 
+        "chart.isShowPopups": true, 
         "popup.activation": "onSelect",
         "controlPanel.caption.isCaptionExternalWhenControlPanelClosed": true,
         "chart.hasDirectLabels": false,
