--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
     "@fizz/jimerator": "^0.9.0",
     "@fizz/paramanifest": "^0.6.2",
     "@fizz/paramodel": "^0.6.10",
-    "@fizz/parasummary": "^0.9.2",
+    "@fizz/parasummary": "^0.9.3-alpha.0",
     "@fizz/sparkbraille-component": "^0.5.0",
     "@fizz/templum": "^0.4.2",
     "@fizz/ui-components": "^0.70.4",
