Updated vite config for vitests and package.json

--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "build:stories": "node src/stories/storiesBuilder.ts",
     "build-storybook": "storybook build",
     "doc": "api-documenter markdown --input-folder ./temp --output-folder ./docs",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
     "pubpatch": "npm version patch && npm publish",
     "pubminor": "npm version minor && npm publish",
     "pubmajor": "npm version major && npm publish",
