--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -31,5 +31,5 @@ jobs:
 
       - name: Run tests
         run: |
-          npx playwright install
+          npx playwright install --with-deps
           npm run test
