--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "build:stories": "node src/stories/storiesBuilder.ts",
     "build-storybook": "storybook build",
     "doc": "api-documenter markdown --input-folder ./temp --output-folder ./docs",
-    "test": "vitest run",
+    "test:unit": "vitest run --project=unit",
+    "test:browser": "vitest run --project=browser",
     "test:watch": "vitest watch",
     "pubpatch": "npm version patch && npm publish",
     "pubminor": "npm version minor && npm publish",
