--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
   },
   "types": "./dist/paracharts.d.ts",
   "devDependencies": {
-    "@fizz/chart-data": "^2.2.9",
+    "@fizz/chart-data": "^2.2.11",
     "@fizz/test-utils": "^0.2.0",
     "@microsoft/api-documenter": "^7.25.11",
     "@microsoft/api-extractor": "^7.47.6",
@@ -122,7 +122,7 @@
     "@fizz/jimerator": "^0.10.1",
     "@fizz/paramanifest": "^0.8.0",
     "@fizz/paramodel": "^0.6.13",
-    "@fizz/parasummary": "^0.9.5-alpha.0",
+    "@fizz/parasummary": "^0.9.7",
     "@fizz/sparkbraille-component": "^0.5.0",
     "@fizz/templum": "^0.4.4",
     "@fizz/ui-components": "^0.70.4",
