Quasi-fix headless demo.

--- a/src/demo-data/bar-multi-manifest-48.json
+++ b/src/demo-data/bar-multi-manifest-48.json
@@ -577,6 +577,13 @@
       ],
       "data": {
         "source": "inline"
+      },
+      "settings": {
+        "controlPanel.isControlPanelDefaultOpen": false,
+        "controlPanel.caption.isCaptionExternalWhenControlPanelClosed": true,
+        "chart.showPopups": true,
+        "popup.activation": "onSelect",
+        "animation.isAnimationEnabled": false
       }
     }
   ]
