--- a/src/demo-data/donut-manifest-dark-matter.json
+++ b/src/demo-data/donut-manifest-dark-matter.json
@@ -58,7 +58,8 @@
       },
       "settings": {
         "controlPanel.isControlPanelDefaultOpen": false,
-        "controlPanel.caption.isCaptionExternalWhenControlPanelClosed": false
+        "controlPanel.caption.isCaptionExternalWhenControlPanelClosed": false,
+        "animation.isAnimationEnabled": false
       }
     }
   ]
