--- a/src/demo-data/line-multi-manifest-67.json
+++ b/src/demo-data/line-multi-manifest-67.json
@@ -258,6 +258,13 @@
       ],
       "data": {
         "source": "inline"
+      },
+      "settings": {
+        "controlPanel.isControlPanelDefaultOpen": false,
+        "controlPanel.caption.isCaptionExternalWhenControlPanelClosed": true,
+        "chart.showPopups": true,
+        "popup.activation": "onSelect",
+        "animation.isAnimationEnabled": false
       }
     }
   ]
