--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
   },
   "types": "./dist/paracharts.d.ts",
   "devDependencies": {
-    "@fizz/chart-data": "^2.2.11",
+    "@fizz/chart-data": "^2.3.8-alpha.0",
     "@fizz/test-utils": "^0.2.0",
     "@microsoft/api-documenter": "^7.25.11",
     "@microsoft/api-extractor": "^7.47.6",
@@ -120,10 +120,10 @@
     "@fizz/chart-classifier-utils": "^0.16.0",
     "@fizz/clustering": "^0.16.0",
     "@fizz/dataframe": "^0.27.0",
-    "@fizz/jimerator": "^0.10.1",
-    "@fizz/paramanifest": "^0.8.0",
-    "@fizz/paramodel": "^0.6.13",
-    "@fizz/parasummary": "^0.9.7",
+    "@fizz/jimerator": "^0.12.1",
+    "@fizz/paramanifest": "^0.10.0",
+    "@fizz/paramodel": "^0.6.18-alpha.1",
+    "@fizz/parasummary": "^0.9.9-alpha.0",
     "@fizz/sparkbraille-component": "^0.5.0",
     "@fizz/templum": "^0.4.4",
     "@fizz/ui-components": "^0.70.4",
