Updated build-and-tests to run unit tests

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -29,7 +29,5 @@ jobs:
         run: |
           npm run build
 
-      - name: Run tests
-        run: |
-          npx playwright install --with-deps
-          npm run test
+      - name: Run unit tests
+        run: npm run test:unit
