--- a/src/demo-data/bar-multi-manifest-48.json
+++ b/src/demo-data/bar-multi-manifest-48.json
@@ -581,7 +581,7 @@
       "settings": {
         "controlPanel.isControlPanelDefaultOpen": false,
         "controlPanel.caption.isCaptionExternalWhenControlPanelClosed": true,
-        "chart.showPopups": true,
+        "chart.isShowPopups": true,
         "popup.activation": "onSelect",
         "animation.isAnimationEnabled": false
       }
