--- a/src/demo-data/line-multi-manifest-67.json
+++ b/src/demo-data/line-multi-manifest-67.json
@@ -262,7 +262,7 @@
       "settings": {
         "controlPanel.isControlPanelDefaultOpen": false,
         "controlPanel.caption.isCaptionExternalWhenControlPanelClosed": true,
-        "chart.showPopups": true,
+        "chart.isShowPopups": true,
         "popup.activation": "onSelect",
         "animation.isAnimationEnabled": false
       }
