--- a/src/demo-data/line-single-manifest-128.json
+++ b/src/demo-data/line-single-manifest-128.json
@@ -77,7 +77,7 @@
       "settings": {
         "controlPanel.isControlPanelDefaultOpen": false,
         "controlPanel.caption.isCaptionExternalWhenControlPanelClosed": true,
-        "chart.showPopups": true,
+        "chart.isShowPopups": true,
         "popup.activation": "onSelect",
         "animation.isAnimationEnabled": false
       }
