--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@vitest/browser": "3.2.4",
     "@vitest/coverage-v8": "3.2.4",
     "eslint-plugin-storybook": "^9.0.13",
+    "happy-dom": "^20.3.1",
     "mustache": "^4.2.0",
     "playwright": "^1.54.1",
     "rimraf": "^6.0.1",
