Changed instances of sonification.isEnabled to sonification.isSoniEnabled

--- a/src/demo-data/bar-multi-manifest-48-external.json
+++ b/src/demo-data/bar-multi-manifest-48-external.json
@@ -120,7 +120,7 @@
         "path": "para:preload"
       },
       "settings": {
-        "sonification.isEnabled": true
+        "sonification.isSoniEnabled": true
       }
     }
   ]
