--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "pubpatch": "npm version patch && npm publish",
     "pubminor": "npm version minor && npm publish",
     "pubmajor": "npm version major && npm publish",
-    "docs:generate": "node ./docs/scripts/buildDocs.ts",
+    "docs:generate": "tsx ./docs/scripts/buildDocs.ts",
     "docs:dev": "npm run docs:generate && vitepress dev docs",
     "docs:build": "npm run docs:generate && vitepress build docs",
     "docs:serve": "vitepress preview docs"
@@ -112,6 +112,7 @@
     "rimraf": "^6.0.1",
     "shadow-dom-testing-library": "^1.12.0",
     "storybook": "^9.0.13",
+    "tsx": "^4.21.0",
     "typescript": "^5.8.3",
     "vite": "^5.4.0",
     "vitepress": "^1.6.4",
