Fixed docs:generate script

--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "pubpatch": "npm version patch && npm publish",
     "pubminor": "npm version minor && npm publish",
     "pubmajor": "npm version major && npm publish",
-    "docs:generate": "tsx ./docs/scripts/buildDocs.ts",
+    "docs:generate": "tsc && api-extractor run --local --verbose && tsx ./docs/scripts/buildDocs.ts",
     "docs:dev": "npm run docs:generate && vitepress dev docs",
     "docs:build": "npm run docs:generate && vitepress build docs",
     "docs:serve": "vitepress preview docs"
