--- a/src/stories/venn-manifest-2.json
+++ b/src/stories/venn-manifest-2.json
@@ -104,26 +104,163 @@
                     ]
                 },
                 {
-                    "key": "Aquatic Animals",
+                    "key": "History",
                     "records": [
                         {
-                            "item": "Eagle",
+                            "item": "Mary",
                             "membership": "excluded"
                         },
                         {
-                            "item": "Butterfly",
+                            "item": "John",
                             "membership": "excluded"
                         },
                         {
-                            "item": "Dolphin",
+                            "item": "Helen",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "William",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "Anna",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "James",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "Margaret",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "George",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "Ruth",
                             "membership": "included"
                         },
                         {
-                            "item": "Shark",
+                            "item": "Charles",
                             "membership": "included"
                         },
                         {
-                            "item": "Flying Fish",
+                            "item": "Elizabeth",
+                            "membership": "included"
+                        },
+                        {
+                            "item": "Robert",
+                            "membership": "included"
+                        },
+                        {
+                            "item": "Florence",
+                            "membership": "included"
+                        },
+                        {
+                            "item": "Joseph",
+                            "membership": "included"
+                        },
+                        {
+                            "item": "Ethel",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "Frank",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "Marie",
+                            "membership": "included"
+                        },
+                        {
+                            "item": "Edward",
+                            "membership": "included"
+                        },
+                        {
+                            "item": "Lillian",
+                            "membership": "included"
+                        }
+                    ]
+                },
+                {
+                    "key": "Chemistry",
+                    "records": [
+                        {
+                            "item": "Mary",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "John",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "Helen",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "William",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "Anna",
+                            "membership": "included"
+                        },
+                        {
+                            "item": "James",
+                            "membership": "included"
+                        },
+                        {
+                            "item": "Margaret",
+                            "membership": "included"
+                        },
+                        {
+                            "item": "George",
+                            "membership": "included"
+                        },
+                        {
+                            "item": "Ruth",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "Charles",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "Elizabeth",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "Robert",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "Florence",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "Joseph",
+                            "membership": "excluded"
+                        },
+                        {
+                            "item": "Ethel",
+                            "membership": "included"
+                        },
+                        {
+                            "item": "Frank",
+                            "membership": "included"
+                        },
+                        {
+                            "item": "Marie",
+                            "membership": "included"
+                        },
+                        {
+                            "item": "Edward",
+                            "membership": "included"
+                        },
+                        {
+                            "item": "Lillian",
                             "membership": "included"
                         }
                     ]
