--- a/package.json
+++ b/package.json
@@ -124,8 +124,9 @@
     "@fizz/jimerator": "^0.12.1",
     "@fizz/logger": "^0.1.0",
     "@fizz/paramanifest": "^0.10.0",
-    "@fizz/paramodel": "^0.6.18",
+    "@fizz/paramodel": "^0.6.20",
     "@fizz/parasummary": "^0.11.1",
+    "@fizz/series-analyzer": "^0.13.9",
     "@fizz/sparkbraille-component": "^0.5.0",
     "@fizz/templum": "^0.4.4",
     "@fizz/ui-components": "^0.70.5",
@@ -137,9 +138,6 @@
     "printf": "^0.6.1",
     "simple-statistics": "^7.8.8",
     "typescript-memoize": "^1.1.1"
-  },
-  "optionalDependencies": {
-    "@fizz/series-analyzer": "^0.13.8"
   },
   "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
 }
