--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
   "scripts": {
     "dev": "storybook dev --no-open -p 5180",
     "go": "npm i && storybook dev --no-open -p 5180",
-    "demo:headless": "vite src/demo/headless/vite --port 5177",
+    "demo:headless": "vite --open src/demo/headless/vite/headless.html --port 5177",
     "demo:ai": "vite --port 5178 --open src/demo/ai/ai.html",
     "storybook": "storybook dev -p 5180",
     "build": "rimraf dist && rimraf types && tsc && vite build && api-extractor run --local --verbose",
