Updated demo-data manifests

--- a/src/demo-data/bar-multi-manifest-48-external.json
+++ b/src/demo-data/bar-multi-manifest-48-external.json
@@ -1,7 +1,10 @@
 {
   "datasets": [
     {
-      "type": "column",
+      "representation": {
+        "type": "chart",
+        "subtype": "column"
+      },
       "title": "Gross domestic product of the ASEAN countries from 2008 to 2018",
       "chartTheme": {
         "baseQuantity": "GDP",
