--- a/src/demo-data/line-multi-manifest-67.json
+++ b/src/demo-data/line-multi-manifest-67.json
@@ -1,7 +1,10 @@
 {
   "datasets": [
     {
-      "type": "line",
+      "representation": {
+        "type": "chart",
+        "subtype": "line"
+      },
       "title": "Gross domestic product of the BRIC countries from 2014 to 2024",
       "chartTheme": {
         "baseQuantity": "GDP",
